<resources>
    <string name="app_name">Tip</string>
    <string name="enter_the_cost">Enter the cost Mfs</string>
    <string name="how_was_the_service">How was the service mfs?</string>
    <string name="perfect">Perfect (20%)</string>
    <string name="pretty_good">Pretty Good (15%)</string>
    <string name="not_bad">Not Bad (10%)</string>
    <string name="round_up_tip">Round up tip ?</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_amount">Tip amount: %s</string>
</resources>