<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_cost"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/option_perfect"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question">

        <RadioButton
            android:id="@+id/option_perfect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfect">

        </RadioButton>

        <RadioButton
            android:id="@+id/option_pretty_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pretty_good">

        </RadioButton>

        <RadioButton
            android:id="@+id/option_not_bad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_bad">

        </RadioButton>
    </RadioGroup>

    <TextView
        android:id="@+id/round_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_up_tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Switch
        android:id="@+id/switch_round_up"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/round_up"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

    </Switch>

    <Button
        android:id="@+id/calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_round_up"></Button>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Tip Amount: $10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate">

    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>